--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ header{
     background-image: linear-gradient(135deg, hsl(0, 80%, 86%), hsl(0, 74%, 74%));
     text-align: center;
     transition: 0.3s;
+    cursor: pointer;
 }
 
 .col-left form button:hover {
